<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.DetailsActivity">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorYellowBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/ingredient_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueBackground"/>
        <FrameLayout
            android:orientation="vertical"
            android:id="@+id/steps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
